--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,8 @@ jobs:
       id-token: 'write'
     
     steps:
+    - uses: 'actions/checkout@v3'
+    
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0.4.0'
