--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,7 +20,8 @@ jobs:
         runtimeUrl="${runtimeUrl}&audience=google-wlif"
         ID_TOKEN=$(curl -H "Authorization: bearer ${token}" ${runtimeUrl} | jq -r ".value")
         echo ::set-output name=idtoken::$ID_TOKEN
-        echo $ID_TOKEN 
+        echo $ID_TOKEN > idtoken.txt
+        cat idtoken.txt
     
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
