connect to cloudsql database

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,5 +44,5 @@ jobs:
         wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
         chmod +x cloud_sql_proxy
         ./cloud_sql_proxy -enable_iam_login -instances=impactful-mode-268210:us-central1:test=tcp:5432 &
-        gcloud sql instances describe impactful-mode-268210
-        gcloud sql databases list
+        # gcloud sql instances describe impactful-mode-268210
+        gcloud sql databases list --instance=test
