--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -48,4 +48,5 @@ jobs:
         chmod +x cloud_sql_proxy
         ./cloud_sql_proxy -enable_iam_login -instances=impactful-mode-268210:us-central1:${{ inputs.instance }}=tcp:5432 &
         # gcloud sql instances describe impactful-mode-268210
-        gcloud sql databases create ${{ inputs.database_name }} --instance=${{ inputs.instance }}
+        # gcloud sql databases create ${{ inputs.database_name }} --instance=${{ inputs.instance }}
+        gcloud sql backups create --instance=${{ inputs.instance }}
