test reusable workflow

--- a/.github/workflows/create_database.yml
+++ b/.github/workflows/create_database.yml
@@ -22,3 +22,4 @@ jobs:
       service_account: "cloudsql-admin-sa@impactful-mode-268210.iam.gserviceaccount.com"
       cloudsql_instance: ${{ inputs.instance }}
       database_name: ${{ inputs.database_name }}
+    secrets: inherit
