--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,7 +44,17 @@ jobs:
       
     - name: 'test'
       run: |-
-        which psql
+        # start proxy
+        wget -q https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+        chmod +x cloud_sql_proxy
+        ./cloud_sql_proxy -enable_iam_login -instances=impactful-mode-268210:us-central1:${{ inputs.instance }}=tcp:5432 &
+        
+        # set password
+        PGPASSWORD="{{ secrets.password }}" psql "hostaddr=127.0.0.1 user=postgres  <<END_OF_SQL
+        create role admin;
+        grant CREATEDB, CREATEROLE to admin;
+        grant admin to "cloudsql-admin-sa@impactful-mode-268210.iam";
+        END_OF_SQL
         # gcloud sql users set-password postgres \
         #  --instance=${{ inputs.instance }} \
         #  --password=${{ secrets.password }}
