--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -59,7 +59,6 @@ jobs:
         
         # do grants
         psql "hostaddr=127.0.0.1 user=postgres"  <<END_OF_SQL
-        create role admin;
-        grant CREATEDB, CREATEROLE to admin;
+        CREATE ROLE admin CREATEDB CREATEROLE;
         grant admin to "cloudsql-admin-sa@impactful-mode-268210.iam";
         END_OF_SQL
