--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -19,17 +19,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
     
-    steps:
-    - id: idtoken
-      shell: bash
-      run: |
-        token=${ACTIONS_ID_TOKEN_REQUEST_TOKEN}
-        runtimeUrl=${ACTIONS_ID_TOKEN_REQUEST_URL}
-        runtimeUrl="${runtimeUrl}&audience=google-wlif"
-        ID_TOKEN=$(curl -H "Authorization: bearer ${token}" ${runtimeUrl} | jq -r ".value")
-        echo ::set-output name=idtoken::$ID_TOKEN
-        echo $ID_TOKEN > idtoken.txt
-    
+    steps:    
     - id: 'auth'
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
@@ -41,6 +31,27 @@ jobs:
     # Install gcloud, `setup-gcloud` automatically picks up authentication from `auth`.
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v0'
+      
+    - name: 'IAM user init'
+    #   env:
+    #     PGPASSWORD: ${{ secrets.PASSWORD }}
+    #   run: |-
+    #     # set password for the default user
+    #     gcloud sql users set-password postgres \
+    #       --instance=${{ inputs.instance }} \
+    #       --password=${PGPASSWORD}
+      
+    #     # start proxy
+    #     wget -q https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
+    #     chmod +x cloud_sql_proxy
+    #     ./cloud_sql_proxy -enable_iam_login -instances=impactful-mode-268210:us-central1:${{ inputs.instance }}=tcp:5432 &
+    #     sleep 5
+        
+    #     # do grants
+    #     psql "hostaddr=127.0.0.1 user=postgres"  <<END_OF_SQL
+    #     CREATE ROLE admin CREATEDB CREATEROLE;
+    #     grant admin to "cloudsql-admin-sa@impactful-mode-268210.iam";
+    #     END_OF_SQL  
         
     - name: 'Verify IAM SA Admin user'
       run: |-      
@@ -51,6 +62,6 @@ jobs:
         sleep 5
         
         # test
-        psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam.gserviceaccount.com'"  <<END_OF_SQL
+        psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
         CREATE DATABASE test;
         END_OF_SQL
