--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,7 +32,7 @@ jobs:
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v0'
       
-    - name: 'IAM user init'
+    #- name: 'IAM user init'
     #   env:
     #     PGPASSWORD: ${{ secrets.PASSWORD }}
     #   run: |-
