--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -76,7 +76,5 @@ jobs:
         # test
         # TODO: protection from SQL injection
         psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
-        CREATE USER admin;
-        ALTER ROLE admin WITH CREATEDB CREATEROLE;
-        create extension btree_gin;
+        CREATE USER superadmin WITH CREATEDB CREATEROLE SUPERUSER;
         END_OF_SQL
