--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -60,7 +60,7 @@ jobs:
         ALTER ROLE "cloudsql-admin-sa@impactful-mode-268210.iam" WITH CREATEDB CREATEROLE;
         END_OF_SQL
         
-        # drop postgres user
+        # drop postgres user - very questionable
         psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
         DROP USER postgres;
         END_OF_SQL
@@ -76,5 +76,5 @@ jobs:
         # test
         # TODO: protection from SQL injection
         psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
-        CREATE USER superadmin WITH CREATEDB CREATEROLE SUPERUSER;
+        CREATE DATABASE ${{ inputs.instance }};
         END_OF_SQL
