--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -74,6 +74,6 @@ jobs:
         
         psql -v ON_ERROR_STOP=1 "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
         PREPARE create_database_plan (text) AS
-            CREATE DATABASE $1;
+            CREATE DATABASE '$1';
         EXECUTE create_database_plan('hardcoded');
         END_OF_SQL
