--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -73,7 +73,7 @@ jobs:
         sleep 5
         
         psql -v ON_ERROR_STOP=1 "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
-        CREATE DATABASE ${{ inputs.database_name }};
+        CREATE DATABASE '${{ inputs.database_name }}';
         #PREPARE create_database_plan (text) AS
         #CREATE DATABASE hardcoded;
         #EXECUTE create_database_plan('hardcoded');
