--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       instance:
         required: true
-        default: 'test-2'
+        default: 'test-3'
         type: string
       database_name:
         required: true
@@ -30,7 +30,7 @@ jobs:
       name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v0'
       with:
-        workload_identity_provider: 'projects/972321173961/locations/global/workloadIdentityPools/gh-pool-36y/providers/gh-provider-36y'
+        workload_identity_provider: 'projects/972321173961/locations/global/workloadIdentityPools/gh-pool-ens/providers/gh-provider-ens'
         service_account: 'cloudsql-admin-sa@impactful-mode-268210.iam.gserviceaccount.com'
         audience: 'google-wlif'
         
@@ -60,9 +60,9 @@ jobs:
         END_OF_SQL
         
         # drop postgres user - very questionable
-        psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
-        DROP USER postgres;
-        END_OF_SQL
+#         psql "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
+#         DROP USER postgres;
+#         END_OF_SQL
         
     - name: 'Verify IAM SA Admin user'
       run: |-      
@@ -74,3 +74,4 @@ jobs:
         
         psql -v ON_ERROR_STOP=1 "hostaddr=127.0.0.1 dbname=postgres user='cloudsql-admin-sa@impactful-mode-268210.iam'"  <<END_OF_SQL
         CREATE DATABASE "${{ inputs.database_name }}";
+        END_OF_SQL
